# ie-ur5e

./: .env.example  .gitignore  DEPLOYMENT.md  Makefile  README.md  docker-compose.yml  pyproject.toml
config/: robot.yaml
docs/: 01-connect-the-robot.md  02-dashboard-server.md  03-rtde.md  04-safety.md  05-urscript-surface.md  README.md
docs/_branding/: build.sh  header.tex  titlepage.tex
docs/manuals/: fetch.sh
examples/: hello_move.py  telemetry_stream.py
rpi-ursim/: README.md  build.sh
rpi-ursim/cloud-init/: docker-compose.yml  network-config  user-data
scripts/: wait_for_ursim.py
src/ie_ur5e/: __init__.py  api.py  cli.py  connection.py  dashboard.py  motion.py  safety.py
src/ie_ur5e/static/: index.html
tests/: test_smoke.py
tests/ie_ur5e/: test_dashboard.py  test_safety.py
